tests/agl/programs/errors/parse_error_fields.agl
# AgentParseError carries the documented diagnostic fields, usable in follow-up
# prompts.
record Spec
  name: text
  level: int

agent builder
agent critic

try
  let s: Spec = ask("Build the spec.", agent = builder, on_parse_error = Retry(n = 1))
  print s.name
catch AgentParseError as e =>
  let advice = ask("""
  Agent ${e.agent} failed for type ${e.target_type} after ${e.attempts} attempts.

  Raw:
  ${e.raw}

  Errors:
  ${e.validation_errors}

  Schema:
  ${e.expected_schema}
  """, agent = critic)
  print "advised"
  raise e
